@@ -21,14 +21,23 @@ indexNotificationJob=Updating C/C++ Indexer clients
 
 convention.illegalIdentifier= Illegal identifier
 convention.invalid= Invalid identifier
+convention.scope.leadingUnderscore= Scope starts with underscore
 convention.scope.lowercaseName= Scope starts with lower case
 convention.scope.nullName= Scope name is null
 convention.scope.emptyName= Scope name is empty
 convention.scope.dotName= Scope name starts or ends with a .
-convention.scope.nameWithBlanks= Scop name has blanks
+convention.scope.nameWithBlanks= Scope name has blanks
 
 convention.class.nullName= Class name is null
 convention.class.nameWithBlanks= Class name has blanks
 convention.class.dollarName= Class name has $
+convention.class.leadingUnderscore= Class name starts with underscore
 convention.class.lowercaseName= Class name starts with lower case
 convention.class.invalidName= Class name is invalid
+
+convention.namespace.nullName= Namespace is null
+convention.namespace.nameWithBlanks= Namespace has blanks
+convention.namespace.dollarName= Namespace has $
+convention.namespace.leadingUnderscore= Namespace starts with underscore
+convention.namespace.lowercaseName= Namespace starts with lower case
+convention.namespace.invalidName= Namespace is invalid
