@@ -114,7 +114,10 @@ public class CConventions {
 			if (CharOperation.contains('$', scannedID)) {
 				return new Status(IStatus.WARNING, CCorePlugin.PLUGIN_ID, -1, Util.bind("convention.class.dollarName"), null); //$NON-NLS-1$
 			}
-			if ((scannedID.length > 0 && Character.isLowerCase(scannedID[0]))) {
+			if (scannedID.length > 0 && scannedID[0] == '_') {
+				return new Status(IStatus.WARNING, CCorePlugin.PLUGIN_ID, -1, Util.bind("convention.class.leadingUnderscore"), null); //$NON-NLS-1$
+			}
+			if (scannedID.length > 0 && Character.isLowerCase(scannedID[0])) {
 				return new Status(IStatus.WARNING, CCorePlugin.PLUGIN_ID, -1, Util.bind("convention.class.lowercaseName"), null); //$NON-NLS-1$
 			}
 			return CModelStatus.VERIFIED_OK;
@@ -122,6 +125,69 @@ public class CConventions {
 			return new Status(IStatus.ERROR, CCorePlugin.PLUGIN_ID, -1, Util.bind("convention.class.invalidName", name), null); //$NON-NLS-1$
 		}
 	}
+
+	/**
+	 * Validate the given CPP namespace name, either simple or qualified. For
+	 * example, <code>"A::B::C"</code>, or <code>"C"</code>.
+	 * <p>
+	 *
+	 * @param name the name of a namespace
+	 * @return a status object with code <code>IStatus.OK</code> if
+	 *		the given name is valid as a CPP class name,
+	 *      a status with code <code>IStatus.WARNING</code>
+	 *		indicating why the given name is discouraged,
+	 *      otherwise a status object indicating what is wrong with
+	 *      the name
+	 */
+	public static IStatus validateNamespaceName(String name) {
+		if (name == null) {
+			return new Status(IStatus.ERROR, CCorePlugin.PLUGIN_ID, -1, Util.bind("convention.namespace.nullName"), null); //$NON-NLS-1$
+		}
+		String trimmed = name.trim();
+		if ((!name.equals(trimmed)) || (name.indexOf(" ") != -1) ){ //$NON-NLS-1$
+			return new Status(IStatus.ERROR, CCorePlugin.PLUGIN_ID, -1, Util.bind("convention.namespace.nameWithBlanks"), null); //$NON-NLS-1$
+		}
+		int index = name.lastIndexOf(scopeResolutionOperator);
+		char[] scannedID;
+		if (index == -1) {
+			// simple name
+			IStatus status = validateIdentifier(name);
+			if (!status.isOK()){
+				return status;
+			}
+
+			scannedID = name.toCharArray();
+		} else {
+			// qualified name
+			String pkg = name.substring(0, index).trim();
+			IStatus status = validateScopeName(pkg);
+			if (!status.isOK()) {
+				return status;
+			}
+			String type = name.substring(index + scopeResolutionOperator.length()).trim();
+			status = validateIdentifier(type);
+			if (!status.isOK()){
+				return status;
+			}
+			scannedID = type.toCharArray();
+		}
+
+		if (scannedID != null) {
+			if (CharOperation.contains('$', scannedID)) {
+				return new Status(IStatus.WARNING, CCorePlugin.PLUGIN_ID, -1, Util.bind("convention.namespace.dollarName"), null); //$NON-NLS-1$
+			}
+			if (scannedID.length > 0 && scannedID[0] == '_') {
+				return new Status(IStatus.WARNING, CCorePlugin.PLUGIN_ID, -1, Util.bind("convention.namespace.leadingUnderscore"), null); //$NON-NLS-1$
+			}
+//			if (scannedID.length > 0 && Character.isLowerCase(scannedID[0])) {
+//				return new Status(IStatus.WARNING, CCorePlugin.PLUGIN_ID, -1, Util.bind("convention.namespace.lowercaseName"), null); //$NON-NLS-1$
+//			}
+			return CModelStatus.VERIFIED_OK;
+		} else {
+			return new Status(IStatus.ERROR, CCorePlugin.PLUGIN_ID, -1, Util.bind("convention.class.invalidName", name), null); //$NON-NLS-1$
+		}
+	}
+
 	/**
 	 * Validate the given scope name.
 	 * <p>
@@ -153,6 +219,9 @@ public class CConventions {
 			char[] scannedID = typeName.toCharArray();
 			if (scannedID == null) {
 				return new Status(IStatus.ERROR, CCorePlugin.PLUGIN_ID, -1, Util.bind("convention.illegalIdentifier", typeName), null); //$NON-NLS-1$
+			}
+			if (firstToken && scannedID.length > 0 && scannedID[0] == '_') {
+				return new Status(IStatus.WARNING, CCorePlugin.PLUGIN_ID, -1, Util.bind("convention.scope.leadingUnderscore"), null); //$NON-NLS-1$
 			}
 			if (firstToken && scannedID.length > 0 && Character.isLowerCase(scannedID[0])) {
 				return new Status(IStatus.WARNING, CCorePlugin.PLUGIN_ID, -1, Util.bind("convention.scope.lowercaseName"), null); //$NON-NLS-1$
