@@ -1,3 +1,9 @@
+2004-08-25 Chris Wiebe
+
+	add namespace validation to CConventions
+	* index/org/eclipse/cdt/internal/core/messages.properties
+	* src/org/eclipse/cdt/core/CConventions.java
+
 2004-08-25 Alain Magloire
 
 	Fix for PR 72078
